# twilight-sparkle

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  publish.sh  update_version.sh
.github/workflows/: build.yml  test.yml
examples/: test.json  test.yml  test2.json
npm/: binary.js  install.js  run.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/parsers/: csv_parser.rs  json.rs  json_parser.rs  lib.rs  toml.rs  toml_parser.rs  yaml.rs  yaml_parser.rs
