[package]
name = "twilight-sparkle"
version = "0.2.4"
authors = ["Hanif Bin Ariffin <hanif.ariffin.4326@gmail.com>"]
license = "MIT"
edition = "2018"
description = "Read values from stdin using expressions understood by that file type"
repository = "https://github.com/hbina/tws"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = ["src/**/*", "Cargo.toml"]

[dependencies]
clap = "2.33.3"
csv = "1.1.6"
httparse = "1.3.5"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
toml = "0.5.8"

[[bin]]
name = "twilight-sparkle"

[profile.release]
lto = true

[lib]
name = "parsers"
path = "src/parsers/lib.rs"
