[package]
name = "twilight-sparkle"
version = "0.3.0"
authors = ["Hanif Bin Ariffin <hanif.ariffin.4326@gmail.com>"]
license = "MIT"
edition = "2018"
description = "Perform queries on files"
repository = "https://github.com/hbina/tws"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = ["src/**/*", "Cargo.toml"]

[dependencies]
atty = "0.2.14"
clap = "2.33.3"
httparse = "1.4.1"
nom = "7.0.0"
serde_json = "1.0.66"
serde_yaml = "0.8.17"
toml = "0.5.8"

[[bin]]
name = "tws"

[profile.release]
lto = true

[lib]
name = "parsers"
path = "src/parsers/lib.rs"
